# AutoRegCT

./: .gitignore  README.md  app.py  launch.bat  pyproject.toml  requirements.txt
autoregct/: __init__.py  io.py  metrics.py  registration.py  segmentation.py  visualization.py
scripts/: run_pipeline.py  test_synthetic.py
tests/: test_pipeline.py
