[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "autoregct"
version = "0.1.0"
description = "Automatic pre/post-op CT registration for total hip arthroplasty"
requires-python = ">=3.10"
dependencies = [
    "SimpleITK>=2.3.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "matplotlib>=3.7.0",
    "scikit-image>=0.21.0",
    "totalsegmentator>=2.0.0",
    "streamlit>=1.30.0",
]

[project.scripts]
autoregct = "scripts.run_pipeline:main"
